--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <p>Yeah!</p>
+    <p>Hello! Open the developer tools, please.</p>
+    <p>Start by editing the files <code>src/</code> folder.</p>
   </body>
 </html>
