--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <p>Hello! Open the developer tools, please.</p>
-    <p>Start by editing the files <code>src/</code> folder.</p>
+    <p>
+      Hello! Open the developer tools, please.<br />
+      Start by editing the files in <code>src/</code> folder.
+    </p>
   </body>
 </html>
