--- a/src/index.html
+++ b/src/index.html
@@ -41,14 +41,14 @@
         </div>
 
         <div class="cards-container">
-            <article class="card">
+            <article class="card" id="card1">
                 <h5>Ravintola 1</h5>
             </article>
-            <article class="card">
+            <article class="card" id="card2">
                 <h5>Ravintola 2</h5>
             </article>
         </div>
    </main>
-
+<script src="index.js"></script>
 </body>
 </html>
