sodexo refactored and split into module

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
                 <h5>Ravintola 2</h5>
             </article>
         </div>
+        <div id="btn-container"></div>
    </main>
 </body>
 </html>
