--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viikko 1 leiska</title>
+    <title>Leiska Viikko2</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
