week3 task3 done

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <meta name="description"
         content="Lounari on sovellus, joka etsii lähellä olevat lounaspaikat, ja näyttää niiden päivittäiset ruokalistat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viikko 2 leiska</title>
+    <title>Viikko 3 leiska</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1024px)" href="assets/mobile.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="/assets/mobile-small.css">
-    <link rel="stylesheet" media="screen and (max-width: 400px)" href="/assets/mobile-xsmall.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="assets/mobile-small.css">
+    <link rel="stylesheet" media="screen and (max-width: 400px)" href="assets/mobile-xsmall.css">
 </head>
 
 <body>
@@ -81,7 +81,7 @@
             <article class="card" id="card1">
 
                 <div class="card-info-container">
-                    <h2>Ravintola 1</h2>
+                    <h2>Sodexo</h2>
                     <div class="card-location-container">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -97,7 +97,7 @@
             <article class="card" id="card2">
 
                 <div class="card-info-container">
-                    <h2>Ravintola 2</h2>
+                    <h2>Fazer</h2>
                     <div class="card-location-container">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -121,7 +121,15 @@
                 </button>
             </div>
         </div>
-        <div id="btn-container"></div>
+        <div id="btn-container">
+          <btn class="language-btn">FI/EN
+          </btn>
+          <btn class="random-btn">Random
+          </btn>
+          <btn class="sort-btn">Sort
+          </btn>
+
+        </div>
     </main>
 
 
