--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1024px)" href="assets/mobile.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="assets/mobile-small.css">
-    <link rel="stylesheet" media="screen and (max-width: 400px)" href="assets/mobile-xsmall.css">
+    <link rel="stylesheet" media="screen and (max-width: 420px)" href="assets/mobile-xsmall.css">
 </head>
 
 <body>
@@ -59,6 +59,7 @@
         </div>
         <div class="image-container">
             <div class="triangle"></div>
+            <div>
             <p class="mobile-info">Missä tänään syötäisiin? Tuttu tarina ennen lounashetkeä.
                 Palvelu etsii lähelläsi olevat lounaspaikat,
                 sekä näyttää niiden päivittäisen lounaslistan.
@@ -148,3 +149,4 @@
 </body>
 
 </html>
+
