--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <p>
-      Hello! Open the developer tools, please.<br />
-      Start by editing the files in <code>src/</code> folder.
-    </p>
+    <p class="coords"></p>
+    <div class="touch"></div>
   </body>
 </html>
