theme and language settings local storage

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,13 @@
           <input class="search-input" type="text" placeholder="Hae ravintolan nimellä.." name="search">
         </div>
       </form>
+      <div class="theme-switch-container">
+
+        <label class="theme-switch" for="checkbox">
+          <input type="checkbox" id="checkbox">
+          <div class="slider-theme"></div>
+        </label>
+      </div>
       <div class="mobile-icon-container">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="ionicon" viewBox="0 0 512 512">
           <title>Menu</title>
